fixed issue with navbar collapse where it wouldn't write new text on first click. centered load button on bottom of screen

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+    background-color: #0abe28;
+}
 .buttons {
     width: 100%;
     margin-top: 10px;
@@ -20,9 +23,12 @@
 }
 
 .load {
-    width: 75vw;
+    position: relative;
+    width: 85vw;
     border-radius: 25px;
     bottom: 1vh;
+    left: 50%;
+    transform: translateX(-50%)
 }
 
 .load:hover {
@@ -53,7 +59,7 @@ img:hover {
 }
 
 .result {
-    margin-top: 10px;
+    margin: 10px 0;
 }
 
 .input-group {
